Allowing the snapped window can be moved outside of work area.

Changes:
1. Allowing the snapped window that next to the origin of the work area
   can be moved outside of the bounds of work area.
2. Delete RestackWindows in SplitViewController, since left and right
   snapped window will not overlap now.

Bug: 775236
Change-Id: Ib1d12443f8b9965544014590b8eff37ed8b3f665